--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "scss": "^0.2.4"
   },
   "devDependencies": {
+    "@types/node": "^16.3.3",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "@vitejs/plugin-react-refresh": "^1.3.1",
