--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   },
   "dependencies": {
     "axios": "^0.21.1",
+    "dotenv": "^10.0.0",
     "react": "^17.0.0",
     "react-dom": "^17.0.0",
     "sass": "^1.35.2",
